--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             <li>小说</li>
             <li>图片</li>
             <li>视频</li>
+
             <li>约饭111</li>
+            <li>约饭(修复bug)</li>
+            <li>小赌</li>
             </ul>
         </div>
 </body>
